# VidFetch

./: .gitignore  BUILD.md  README.md  main.py  pyproject.toml  test_app.py
scripts/: build_exe.py  test_build.py
src/vidfetch/: app.py  version.py
src/vidfetch/core/: __init__.py  downloader.py  models.py  muxer.py  youtube_client.py
src/vidfetch/ui/: __init__.py  components.py  download_item.py  main_window.py
src/vidfetch/utils/: __init__.py  config.py  logging.py  paths.py
youtube_downloader_designes/: index.html
youtube_downloader_designes/css/: styles.css
youtube_downloader_designes/js/: app.js
