[project]
name = "vidfetch"
version = "0.1.0"
description = "A modern, cross-platform YouTube video downloader with a beautiful GUI built using CustomTkinter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.0.0",
    "pyinstaller>=6.0.0",
    "requests>=2.32.5",
    "urllib3>=2.6.2",
    "yt-dlp>=2025.12.8",
]
